# freq

./: .ghci  .gitignore  CONTRIBUTING.md  LICENSE  README.md  default.nix  freq.cabal  ft.txt  result  shell.nix
Data/: Freq.hs
Freq/: Digram.hs
Freq/Digram/: Builder.hs  Internal.hs
app/: Main.hs
bench/: Main.hs
nix/: default.nix  fetchNixpkgs.nix
nix/haskell/: discrete-intervals.nix  quickcheck-classes.nix
src/: Freq.hs  Hadamard.hs
src/Freq/: Internal.hs
test/: Main.hs
tests/: dracula.txt  toby.freq
