---------------------------------------------------------------------

name:                      freq
version:                   0.1.0.0
build-type:                Simple
cabal-version:             >= 1.10
category:                  Data
author:                    Daniel Cartwright
maintainer:                dcartwright@layer3com.com
license:                   MIT
license-file:              LICENSE
homepage:                  https://github.com/chessai/freq
bug-reports:               https://github.com/chessai/freq/issues
--synopsis:                  
--description:               
extra-source-files:        README.md
tested-with:               GHC == 8.2.1, GHC == 8.2.2

---------------------------------------------------------------------

source-repository head
    type:                git
    branch:              master
    location:            https://github.com/chessai/freq.git

---------------------------------------------------------------------

library
    hs-source-dirs:        src
    build-depends:         base       >= 4.9 && < 5.0
                         , bytestring 
                         , containers 
    exposed-modules:       Freq
    default-language:      Haskell2010
                       
executable freq
    hs-source-dirs:        app
    build-depends:         base, freq, bytestring, containers
    main-is:               Main.hs
    default-language:      Haskell2010

---------------------------------------------------------------------

